{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 11,
  "lineage": "f639703c-c07c-120a-9b56-82bb84c9526d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "security_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b79f6b294a030f24",
            "arn": "arn:aws:ec2:eu-north-1:227842501528:instance/i-08adc39bb44195755",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloud-security-ec2-ssm-profile",
            "id": "i-08adc39bb44195755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ae41a50d91b12a99"
              }
            ],
            "primary_network_interface_id": "eni-0ae41a50d91b12a99",
            "private_dns": "ip-10-0-1-138.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.138",
            "public_dns": "ec2-13-60-238-101.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.238.101",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:227842501528:key/e633fea0-e122-41cb-8286-3e3d67e4cf3b",
                "throughput": 125,
                "volume_id": "vol-09a5a1cf5838936ca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02be816b0e7bb9a81",
            "tags": {
              "Environment": "Lab",
              "Name": "cloud-security-lab-vm",
              "Project": "Autonomous-Cloud-Security"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "cloud-security-lab-vm",
              "Project": "Autonomous-Cloud-Security"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af8a22d4ab57b610"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "i-08adc39bb44195755",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:227842501528:internet-gateway/igw-0b001905edf1503e0",
            "id": "igw-0b001905edf1503e0",
            "owner_id": "227842501528",
            "region": "eu-north-1",
            "tags": {
              "Name": "cloud-security-igw"
            },
            "tags_all": {
              "Name": "cloud-security-igw"
            },
            "vpc_id": "vpc-0d13d2a5592b80260"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "igw-0b001905edf1503e0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:227842501528:route-table/rtb-0c27c1ad65267d11e",
            "id": "rtb-0c27c1ad65267d11e",
            "owner_id": "227842501528",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b001905edf1503e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-security-public-rt"
            },
            "tags_all": {
              "Name": "cloud-security-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13d2a5592b80260"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "rtb-0c27c1ad65267d11e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6d590ea00ec265d",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c27c1ad65267d11e",
            "subnet_id": "subnet-02be816b0e7bb9a81"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "rtbassoc-0e6d590ea00ec265d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:227842501528:security-group/sg-0af8a22d4ab57b610",
            "description": "Security group for cloud security lab EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af8a22d4ab57b610",
            "ingress": [],
            "name": "cloud-security-ec2-sg",
            "name_prefix": "",
            "owner_id": "227842501528",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-security-ec2-sg"
            },
            "tags_all": {
              "Name": "cloud-security-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d13d2a5592b80260"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "sg-0af8a22d4ab57b610",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:227842501528:subnet/subnet-02be816b0e7bb9a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02be816b0e7bb9a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227842501528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "cloud-security-public-subnet"
            },
            "tags_all": {
              "Name": "cloud-security-public-subnet"
            },
            "vpc_id": "vpc-0d13d2a5592b80260"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "subnet-02be816b0e7bb9a81",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:227842501528:vpc/vpc-0d13d2a5592b80260",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d3c473c6eb2d97b",
            "default_route_table_id": "rtb-06493d37050369911",
            "default_security_group_id": "sg-0e24678c0baa30917",
            "dhcp_options_id": "dopt-06230a408ecb67bc4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d13d2a5592b80260",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06493d37050369911",
            "owner_id": "227842501528",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Lab",
              "Name": "cloud-security-vpc",
              "Project": "Autonomous-Cloud-Security"
            },
            "tags_all": {
              "Environment": "Lab",
              "Name": "cloud-security-vpc",
              "Project": "Autonomous-Cloud-Security"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227842501528",
            "id": "vpc-0d13d2a5592b80260",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}